syntax = "proto3";

package pachyderm.worker.pipeline.transform;
option go_package = "github.com/pachyderm/pachyderm/src/server/worker/pipeline/transform";

import "client/pfs/pfs.proto";
import "client/pps/pps.proto";
import "server/worker/common/common.proto";

message DatumInputs {
  repeated common.Input inputs = 1;
}

message HashtreeInfo {
  // Object for fetching from object storage if the hashtree is not in the worker cache
  pfs.Object object = 1;

  // Address used for fetching a cached version directly from the worker
  string address = 2;
}

message JobData {
  string job_id = 1;
}

message DatumData {
  // Inputs
  pfs.Object datums = 1;

  // Outputs
  pps.ProcessStats process_stats = 2;
	int64 datums_processed = 4;
	int64 datums_skipped = 5;
	int64 datums_recovered = 6;
	int64 datums_failed = 7;
	pfs.Object recovered_datums = 8;
	string failed_datum_id = 3;
}

message MergeData {
  // Inputs
  int64 shard = 2;

  // Outputs
  HashtreeInfo output = 3;
}